resources/main.css
.colour-r {
  color: #e00;
}
.colour-g {
  color: green;
}
.colour-b {
  color: blue;
}
.colour-v {
  color: darkviolet;
}

.end {
  font-size: x-large;
  font-weight: bold;
  margin-top: 1em;
  text-align: center;
}

.important {
  border: 2px solid black;
}
.important > .katex-display {
  margin: 0.5em 0;
}

.katex-display > .katex {
  overflow-x: auto;
  overflow-y: hidden;
  margin-top: -0.5em;
  padding-top: 0.5em;
  margin-bottom: -0.25em;
  padding-bottom: 0.25em;
}

.permalink {
  background-image: url(/resources/permalink.svg);
  background-position: center left;
  background-repeat: no-repeat;
  background-size: 1em;
  padding-left: 1.5em;
}

body {
  line-height: 1.4;
}

footer {
  border-top: 1px solid black;
  margin-top: 1.5em;
  padding-top: 0.5em;
}

img {
  max-width: 100%;
  height: auto;
}

li {
  margin-bottom: 0.2em;
}

noscript {
  color: crimson;
  font-weight: bold;
}

table {
  background-color: white;
  border-spacing: 0;
  border-collapse: collapse;
}

th {
  background-color: #eee;
}

th, td {
  border: 1px solid black;
  padding: 0.4em;
}

